--- a/birthdayCard/index.html
+++ b/birthdayCard/index.html
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="text" style="position: relative;">
               <form action="/url" method="GET">
-                  <label for="fb" style="color: #fff; text-align: center;"><h1>Happy Birthday!</h1></label> -->
+                  <label for="fb" style="color: #fff; text-align: center;"><h1>Happy Birthday!</h1></label>
                   <input type="text" name="fname" id="fname" style="color: #eee; font-size:x-large; text-align: center; margin-top: 8%;" placeholder="Enter the Name" required><br><br>
                   <input type="text" name="fname" id="fdob" style="color: #eee; font-size: larger; text-align: center;" placeholder="Enter the Date" required>
                 </form>
